# crawl

./: .gitignore  CLAUDE.md  Cargo.toml  crawl.toml
crates/crawl-brain/: Cargo.toml  build.rs
crates/crawl-brain/src/: api.rs  config.rs  curiosity.rs  engine.rs  inference.rs  journal.rs  llm.rs  main.rs  memory.rs  monitor.rs  ollama.rs  policy.rs  portal.html  portal.rs  portal_chat.html  portal_tasks.html  research.rs  reward.rs  sandbox.rs  scheduler.rs  soul.rs  storage.rs  updater.rs  wisdom.rs
crates/crawl-plugin-build/: Cargo.toml
crates/crawl-plugin-build/src/: lib.rs
crates/crawl-plugin-identifier/: Cargo.toml
crates/crawl-plugin-identifier/src/: lib.rs
crates/crawl-plugin-identify/: Cargo.toml
crates/crawl-plugin-identify/src/: lib.rs
crates/crawl-plugin-logwatch/: Cargo.toml
crates/crawl-plugin-logwatch/src/: lib.rs
crates/crawl-plugin-maintain/: Cargo.toml
crates/crawl-plugin-maintain/src/: lib.rs
crates/crawl-plugin-monitor/: Cargo.toml
crates/crawl-plugin-monitor/src/: lib.rs
crates/crawl-plugin-procure/: Cargo.toml
crates/crawl-plugin-procure/src/: lib.rs
crates/crawl-plugin-research/: Cargo.toml
crates/crawl-plugin-research/src/: lib.rs
crates/crawl-plugin-sdk/: Cargo.toml
crates/crawl-plugin-sdk/src/: lib.rs
crates/crawl-plugin-sysmon/: Cargo.toml
crates/crawl-plugin-sysmon/src/: lib.rs
crates/crawl-plugin-train/: Cargo.toml
crates/crawl-plugin-train/src/: lib.rs
crates/crawl-plugin-trainer/: Cargo.toml
crates/crawl-plugin-trainer/src/: lib.rs
crates/crawl-plugin-update/: Cargo.toml
crates/crawl-plugin-update/src/: lib.rs
crates/crawl-types/: Cargo.toml
crates/crawl-types/src/: lib.rs
policy/: default.ron
proto/: crawl.proto
tests/integration/: mod.rs
wit/: world.wit
xtask/: Cargo.toml
xtask/src/: main.rs
