[package]
name = "crawl-brain"
description = "Supervisor daemon for the crawl Brain + Cells system"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "crawl-brain"
path = "src/main.rs"

[dependencies]
crawl-types = { path = "../crawl-types" }

# Async
tokio = { workspace = true }

# WASM
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
ron = { workspace = true }
postcard = { workspace = true }

# Crypto
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# HTTP
reqwest = { workspace = true }
axum = { workspace = true }

# Rate limiting
governor = { workspace = true }

# Storage
redb = { workspace = true }
rusqlite = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# gRPC
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tonic-web = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# CLI
clap = { workspace = true }

# Chrono / UUID
chrono = { workspace = true }
uuid = { workspace = true }

# Misc
bytes = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
notify = { workspace = true }

# URL encoding
urlencoding = "2"

# Regex (lightweight, no proc-macro)
regex-lite = "0.1"

# Sandbox
landlock = { workspace = true }

# ONNX
ort = { workspace = true }

# Git
gix = { workspace = true }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
tempfile = "3"
