[package]
name = "crawl-plugin-monitor"
description = "Monitor Cell — reads /proc metrics, scans logs for anomalies"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
crawl-plugin-sdk = { path = "../crawl-plugin-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
crate-type = ["cdylib"]
