[package]
name = "crawl-plugin-sysmon"
description = "System monitor Cell — reads /proc metrics and reports system state"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
crawl-plugin-sdk = { path = "../crawl-plugin-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
crate-type = ["cdylib"]
