[package]
name = "crawl-types"
description = "Shared domain types for the crawl system"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
postcard = { workspace = true }
thiserror = { workspace = true }
